--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,16 +4,16 @@ name: Generate Snake
 # Controls when the action will run.
 on:
   schedule:
-      # every 12 hours
+    # every 12 hours
     - cron: "0 */12 * * *"
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
-  
-  # Also run on every push on the master branch
+
+  # Also run on every push to the main branch
   push:
     branches:
-    - main
+      - main
 
 # The sequence of runs in this workflow:
 jobs:
@@ -24,25 +24,25 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Clone repo
+      - name: Checkout repository
         uses: actions/checkout@v3
-    
+
       - name: Generate the snake files in './dist/'
         uses: Platane/snk@v3
-        id: snake-gif
+        id: generate-snake
         with:
-          github_user_name: <shzanya>
+          github_user_name: <shzanya> # Замените на ваше имя пользователя
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Show build status
+      - name: Check build status
         run: git status
 
-      - name: Push new files to the output branch
+      - name: Push files to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
